samples/_failures_safe/1761622163_cd1415_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a6fd4484.c: In function ‘main’:
./samples/SAFE/__tmp_a6fd4484.c:161:49: error: ‘factorial’ undeclared (first use in this function)
  161 |     double factorial_result = compute_factorial(factorial
      |                                                 ^~~~~~~~~
./samples/SAFE/__tmp_a6fd4484.c:161:49: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a6fd4484.c:161:58: error: expected ‘)’ at end of input
  161 |     double factorial_result = compute_factorial(factorial
      |                                                ~         ^
      |                                                          )
./samples/SAFE/__tmp_a6fd4484.c:161:5: error: expected declaration or statement at end of input
  161 |     double factorial_result = compute_factorial(factorial
      |     ^~~~~~
